2010-01-26  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c (openvas_syslog_func): New logging function.
	Plain wrapper to syslog, does not touch the message.
	(setup_log_handlers) [0]: Register openvas_syslog_func in case the
	filename is "syslog".

2010-01-26  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* hg/hg_add_hosts.c (range): Doc, renamed parameters.
	(netmask_to_cidr_netmask): Added doc, minor cosmetic.
	
	* hg/hg_filter.c: Minor cosmetics.

	* hg/hg_subnet.c: Include header file, remove forward declarations,
	minor cosmetics.
	(hg_gather_subnet_hosts): Marked a comment about IPv6 as TODO.

2010-01-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Added functionality to print an xml entity tree to a string.

	* omp/xml.c (free_entity): Tiny doc change.
	(foreach_print_entity_to_string, foreach_print_attribute_to_string)
	(print_entity_to_string, print_entities_to_string): New functions to
	print an xml entity tree to string.

	* omp/xml.h (print_entity_to_string, print_entitites_to_string): Protos
	for new functions.

2010-01-19  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-01-19  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.2 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-01-14  Matthew Mundell <matthew.mundell@intevation.de>

	Add support for modifying the scanner configuration file.

	* base/settings.c (settings_init, settings_cleanup, settings_set)
	(settings_save, init_settings_iterator): New functions.
	(init_settings_iterator): Move key_file init to settings_init.
	(cleanup_settings_iterator): Call through to settings cleanup.
	(settings_iterator_next, settings_iterator_name): Rename iterator param.
	(settings_iterator_value): Get fields from settings.
